# Personalized-AI-Agent

./: .env  .env.example  README.md  main.py  pyproject.toml  server.py
agents/: decision.py  knowledge.py  manager.py  planner.py
data/: faiss_index  personal_brain.db
memory/: embeddings.py  faiss_store.py  sqlite_store.py
models/: schemas.py
static/: app.js  index.html  style.css
tests/: test_api.py  test_flow.py
utils/: config.py  logger.py  security.py
workflows/: graph.py
