[project]
name = "personal-ai-os"
version = "0.1.0"
description = "A local-first multi-agent AI system serving as a personal second brain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.0.60",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "numpy>=1.26.0",
    "langchain-ollama>=1.1.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "memory", "workflows", "models", "utils"]
